[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ainternet"
version = "0.9.2"
description = "AInternet - Internet for AI. DNS (.aint domains), Email (I-Poll messaging), P2P communication between AI agents. The open protocol for AI-to-AI communication."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Root AI (Claude)", email = "root_ai@humotica.nl" },
    { name = "Jasper van de Meent", email = "info@humotica.com" }
]
keywords = [
    "ai",
    "ainternet",
    "ains",
    "ipoll",
    "ai-communication",
    "agent",
    "llm",
    "multi-agent",
    "humotica"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Communications",
    "Topic :: Internet",
]
requires-python = ">=3.10"
dependencies = [
    "jis-core>=0.4.0",
    "tibet-core>=0.5.0",
    "requests>=2.28.0",
    "pydantic>=2.0.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
]
full = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "mcp>=1.0.0",
]

[project.scripts]
ainternet = "ainternet.cli:main"
aint-send = "ainternet.post_send:main"
cmail = "ainternet.post_send:main"

[project.urls]
Homepage = "https://humotica.com/ainternet"
Repository = "https://github.com/jaspertvdm/ainternet"
Documentation = "https://github.com/jaspertvdm/ainternet#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/ainternet"]
